<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/Vin_container_layout"
        style="@style/ConstraintLayoutContainerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/separator1"
            style="@style/SeparatorLargeTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/ChooseLabelTheme"
            android:text="@string/choose_gender_label"
            app:layout_constraintBottom_toBottomOf="@+id/switch_buttons_container"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/switch_buttons_container"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:padding="1dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@id/separator1">

            <TextView
                android:id="@+id/gender_view_male"
                style="@style/ActiveGenderButton"
                android:text="Господин"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/gender_view_female"
                style="@style/PassiveGenderButton"
                android:text="Госпожа"
                android:layout_weight="1"/>

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/manufacture_year_container_layout"
        style="@style/ConstraintLayoutContainerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Vin_container_layout">

        <View
            android:id="@+id/separator2"
            style="@style/SeparatorDefaultTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/ChooseLabelTheme"
            android:text="@string/first_name_input_label"
            app:layout_constraintBottom_toBottomOf="@+id/lastName_editText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/lastName_editText"
            style="@style/ChooseHintEditTextTheme"
            android:hint="@string/first_name_input_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@id/separator2" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout3"
        style="@style/ConstraintLayoutContainerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manufacture_year_container_layout">

        <View
            android:id="@+id/separator3"
            style="@style/SeparatorDefaultTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/ChooseLabelTheme"
            android:text="@string/name_input_label"
            app:layout_constraintBottom_toBottomOf="@+id/firstName_editText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/firstName_editText"
            style="@style/ChooseHintEditTextTheme"
            android:hint="@string/Name_input_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@id/separator3" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout4"
        style="@style/ConstraintLayoutContainerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <View
            android:id="@+id/separator4"
            style="@style/SeparatorDefaultTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            style="@style/ChooseLabelTheme"
            android:text="@string/patron_input_label"
            app:layout_constraintBottom_toBottomOf="@+id/middleName_editText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/middleName_editText"
            style="@style/ChooseHintEditTextTheme"
            android:hint="@string/patron_name_input_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@id/separator4" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout5"
        style="@style/ConstraintLayoutContainerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <View
            android:id="@+id/separator5"
            style="@style/SeparatorDefaultTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            style="@style/ChooseLabelTheme"
            android:text="@string/phone_input_label"
            app:layout_constraintBottom_toBottomOf="@+id/phone_editText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/phone_editText"
            style="@style/ChooseHintEditTextTheme"
            android:hint="@string/phone_input_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@id/separator5" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <View
            android:id="@+id/separator6"
            style="@style/SeparatorDefaultTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            style="@style/ChooseLabelTheme"
            android:text="@string/email_input_label"
            app:layout_constraintBottom_toBottomOf="@+id/dealer_editText"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/dealer_editText"
            style="@style/ChooseHintEditTextTheme"
            android:hint="@string/email_input_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@id/separator6" />

        <View
            android:id="@+id/separator_bottom"
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>