<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/Vin_container_layout"
        style="@style/ConstraintLayoutContainerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/separator1"
            style="@style/SeparatorLargeTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:text="@string/vin_input_label"
            style="@style/ChooseLabelTheme"
            app:layout_constraintBottom_toBottomOf="@+id/vin_editText_view"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/vin_editText_view"
            android:hint="@string/vin_edit_text_hint"
            style="@style/ChooseHintEditTextTheme"
            android:maxLength="17"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@id/separator1" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/manufacture_year_container_layout"
        style="@style/ConstraintLayoutContainerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Vin_container_layout">

        <View
            android:id="@+id/separator2"
            style="@style/SeparatorDefaultTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:text="@string/year_choose_label"
            style="@style/ChooseLabelTheme"
            app:layout_constraintBottom_toBottomOf="@+id/manufacture_year_hint"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/manufacture_year_hint"
            style="@style/ChooseHintTheme"
            android:layout_marginRight="0dp"
            android:paddingRight="0dp"
            android:text="@string/year_choose_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@id/separator2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="16sp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/manufacture_year_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/arrow" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout3"
        style="@style/ConstraintLayoutContainerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manufacture_year_container_layout">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="16sp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/class_choose_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/arrow" />

        <View
            android:id="@+id/separator3"
            style="@style/SeparatorDefaultTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:text="@string/class_choose_label"
            style="@style/ChooseLabelTheme"
            app:layout_constraintBottom_toBottomOf="@+id/class_choose_hint"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/class_choose_hint"
            style="@style/ChooseHintTheme"
            android:layout_marginEnd="8dp"
            android:text="@string/class_choose_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@id/separator3" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout4"
        style="@style/ConstraintLayoutContainerTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="16sp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/city_choose_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/arrow" />

        <View
            android:id="@+id/separator4"
            style="@style/SeparatorDefaultTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:text="@string/city_choose_label"
            style="@style/ChooseLabelTheme"
            app:layout_constraintBottom_toBottomOf="@+id/city_choose_hint"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/city_choose_hint"
            style="@style/ChooseHintTheme"
            android:layout_marginEnd="8dp"
            android:text="@string/city_choose_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@id/separator4" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        style="@style/ConstraintLayoutContainerTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="16sp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/dealer_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/arrow" />

        <View
            android:id="@+id/separator6"
            style="@style/SeparatorDefaultTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:text="@string/dealer_choose_label"
            style="@style/ChooseLabelTheme"
            app:layout_constraintBottom_toBottomOf="@+id/dealer_editText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dealer_editText"
            style="@style/ChooseHintTheme"
            android:layout_marginEnd="8dp"
            android:text="@string/dealer_choose_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@id/separator6" />

        <View
            android:id="@+id/separator_bottom"
            style="@style/SeparatorLargeTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>